<resources>
    <string name="app_name">BookPlayer</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">MAtt MADE THIS POOP</string>
    <string name="play_button">Play</string>
    <string name="pause_button">Pause</string>
    <string name="reset_button">Reset</string>
    <string name="forward_chapter_button">Next Chapter</string>
    <string name="refresh_button">Refresh Library</string>
    <string name="browse_library_button">Browse Library</string>
    <string name="title_activity_library">LibraryActivity</string>
    <string name="book_cover">Book Cover</string>
</resources>
